[workspace]
members = ["crates/*", "sandbox-ctl"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Erick Jesus <erick.jesus2060@gmail.com>"]
license = "MIT"
repository = "https://github.com/ErickJ3/sandbox-rs"
homepage = "https://github.com/ErickJ3/sandbox-rs"

[workspace.dependencies]
sandbox-core = { path = "crates/sandbox-core" }
sandbox-seccomp = { path = "crates/sandbox-seccomp" }
sandbox-namespace = { path = "crates/sandbox-namespace" }
sandbox-landlock = { path = "crates/sandbox-landlock" }
sandbox-cgroup = { path = "crates/sandbox-cgroup" }
sandbox-fs = { path = "crates/sandbox-fs" }
sandbox-rs = { path = "crates/sandbox-rs" }

nix = { version = "0.31", features = ["process", "sched", "mount", "resource", "signal", "fs"] }
libc = "0.2.0"
thiserror = "2"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
log = "0.4"
seccompiler = "0.5"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
strip = true
